--- a/HearthStoneTimer/res/values/strings.xml
+++ b/HearthStoneTimer/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="app_name">HearthStoneTimer</string>
     <string name="action_settings">Settings</string>
-    <string name="enemytimer"></string>
-    <string name="mytimer"></string>
+    <string name="enemytimer">0:00</string>
+    <string name="mytimer">0:00</string>
     <string name="enemyend">END TURN</string>
     <string name="myend">END TURN</string>
     <string name="startgame">Game Start!</string>
